# jsk_pr2eus

pr2eus_tutorials/: CMakeLists.txt
pr2eus_tutorials/config/: pr2_deco.rviz
pr2eus_tutorials/euslisp/deco_demo/: chaplus_talk_test.l  common_func.l  demo_main.l  recognize_decoration.l  recognize_wall.l  test_push_deco.l  think_decolation.l  think_decoration.l  work_on_decoration.l
pr2eus_tutorials/launch/: pr2_deco.launch  rosbag_record_deco.launch
pr2eus_tutorials/launch/gazebo/: pr2_deco_scene.launch
pr2eus_tutorials/models/demo_cube_green/: model.sdf
pr2eus_tutorials/models/demo_cube_red/: model.sdf
pr2eus_tutorials/models/demo_cube_yellow/: model.sdf
pr2eus_tutorials/msg/: DecoImages.msg
pr2eus_tutorials/scripts/deco_demo/: chaplus_talk_test.py  graph_endeffector.py  make_deco_imgs.py  plane_normal_vector.py  relay_sound_with_flag.py  think_deco.py  think_deco_node.py  xyz_to_screenpoint.py
pr2eus_tutorials/srv/: DecoImgs.srv  PointStamped.srv
pr2eus_tutorials/worlds/: deco.world
